testdata/asm/invalid/div_01.zkasm
;;error:7:25-26:unexpected target register
fn div(x u16, y u16) -> (q u16, r u16) {
  var sum u32
  var witsum u17
  var w u16

  q, r, w, sum, witsum, x = x / y
  return
}
